# Termtris

./: .clang-format  .gitmodules  meson.build
include/: block.hpp  playfield.hpp  score.hpp  tetriminos.hpp  tetris.hpp
src/: main.cpp  playfield.cpp  score.cpp  tetriminos.cpp  tetris.cpp
